<resources>
    <string name="app_name">PDFReader</string>
    <string name="create_new_pdf">Create New PDF</string>
    <string name="open_pdf">Open PDF</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="pdf_title">PDF Title</string>
    <string name="minutes_of_the_meeting">MINUTES OF THE MEETING</string>
    <string name="content">Content</string>
    <string name="this_is_where_you_type">This is where you type ... *</string>
    <string name="pdf_read_container">PDF Read Container</string>
    <string name="all_files">All Files</string>
    <string name="image_to_pdf">Image To PDF</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="support_us">Support Us</string>
    <string name="more_from_developer">More from Developer</string>
    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>
    <string name="pdf_reader">PDF Reader</string>
    <string name="select_image">Select Image</string>
    <string name="convert_to_pdf">Convert to PDF</string>
</resources>
