<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="">
        <menu>
            <item
                android:id="@+id/show_all_files"
                android:title="@string/all_files"
                app:showAsAction="never" />

            <item
                android:id="@+id/image_to_pdf"
                android:title="@string/image_to_pdf"
                app:showAsAction="never" />
        </menu>
    </item>

    <item android:title="@string/support_us">
        <menu>
            <item
                android:id="@+id/rate_app"
                android:title="@string/rate_app"
                app:showAsAction="never" />

            <item
                android:id="@+id/share_app"
                android:title="@string/share_app"
                app:showAsAction="never" />

            <item
                android:id="@+id/more_apps"
                android:title="@string/more_from_developer"
                app:showAsAction="never" />
        </menu>
    </item>
</menu>