<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="24dp"
    tools:context="com.madhouseapps.pdfreader.CreatePDFActivity">

    <TextView
        android:id="@+id/pdf_title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pdf_title"
        android:textAllCaps="true"
        android:textColor="@color/darkerPrimary"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/pdf_title_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:backgroundTint="@android:color/white"
        android:hint="@string/minutes_of_the_meeting"
        android:inputType="text|textCapCharacters"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pdf_title_label" />

    <TextView
        android:id="@+id/pdf_content_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/content"
        android:textAllCaps="true"
        android:textColor="@color/darkerPrimary"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pdf_title_input" />

    <EditText
        android:id="@+id/pdf_content_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@android:color/white"
        android:gravity="start"
        android:hint="@string/this_is_where_you_type"
        android:inputType="text|textCapCharacters"
        android:textAllCaps="true"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pdf_content_label"
        app:layout_constraintVertical_bias="0" />

</android.support.constraint.ConstraintLayout>
